--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -18,3 +18,4 @@ jobs:
           token: ${{ secrets.RENOVATE_TOKEN }}
         env:
           LOG_LEVEL: debug
+          RENOVATE_REPOSITORIES: '["Rojax/renovate-pin-issue"]'
